ZON-1288: schema.org articleBody

--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -49,7 +49,7 @@
     {% endprofile %}
     {% profile %}
         {% block article_body %} 
-        <div class="article-body">
+        <div class="article-body" itemprop="articleBody">
             {% block article_pages %}
                 <!-- Here goes the content for a page -->
             {% endblock article_pages %}
