--- a/src/zeit/web/site/templates/breaking_news_article.html
+++ b/src/zeit/web/site/templates/breaking_news_article.html
@@ -1,5 +1,8 @@
 {% extends "zeit.web.site:templates/article_komplett.html" %}
 
+{% block breaking_news %}
+{% endblock breaking_news %}
+
 {% block article_heading %}
     <div class="breaking-news-banner">
         Eilmeldung <span class="breaking-news-banner__time">{{- view.date_last_modified | format_date('time_only') -}}</span>
