--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -5,6 +5,19 @@
     {% block content %}
     <article class="article" id="js-article" itemtype="http://schema.org/Article" itemscope>
     {% profile %}
+        {% block schema_org_image_info %}
+            {% set schema_image_url = view.image_group | sharing_image_url(image_pattern='og-image') %}
+            {%- if schema_image_url -%}
+            <script type="application/ld+json">
+            {
+                "@context": "http://schema.org",
+                "@type": "ImageObject",
+                "contentUrl": "{{ schema_image_url }}",
+                "datePublished": "2008-01-25"
+            }
+            </script>
+            {%- endif -%}
+        {% endblock schema_org_image_info %}
         {% block article_heading %}
         <h1 class="article-heading" itemprop="headline">
             <span class="article-heading__kicker">
