--- a/sass/web.magazin/base/typography/_structure.sass
+++ b/sass/web.magazin/base/typography/_structure.sass
@@ -58,13 +58,15 @@
     max-width: 50%
 
 .video--fallback
-  display: none
   position: absolute
-  top: 0
-  right: 0
-  bottom: 0
+  top: -50%
+  right: -50%
+  bottom: -50%
+  left: -50%
   margin: auto
+  width: auto
+  height: auto
+  min-width: 100%
   min-height: 100%
-  @media only screen and (orientation : portrait)
-    left: -50%
-    min-width: 200%
+  max-width: none
+  max-height: none
