--- a/sass/web.magazin/modules/_longform.sass
+++ b/sass/web.magazin/modules/_longform.sass
@@ -90,22 +90,13 @@ $longform-header-max-height: 1400px
     +respond-min-h(em(1400px))
       height: em(1400px) - em($longform-header-offset)
 
-  .article__main-image--longform
-    +background-size(cover)
-    +hide-text
-    z-index: 1
-    background-color: $black
-    background-repeat: no-repeat
-    background-position: center center
-    position: absolute
-    top: 0
-    left: 0
-    width: 100%
-    &.video--fallback
-      display: inline
-      @media only screen and (orientation : portrait)
-        left: -50%
-        min-width: 200%
+  .article__head-image
+    height: 100%
+    img
+      min-width: 100%
+      min-height: 100%
+      max-width: none
+      max-height: none
 
   .article__main-video--longform
     overflow: hidden
