ZON-1440: Differentiate breaking news article
Differentiate breaking news article class from global breaking news.

--- a/src/zeit/web/site/templates/breaking_news_article.html
+++ b/src/zeit/web/site/templates/breaking_news_article.html
@@ -4,7 +4,7 @@
 {% endblock breaking_news %}
 
 {% block article_heading %}
-    <div class="breaking-news-banner">
+    <div class="breaking-news-banner breaking-news-banner--article">
         Eilmeldung <span class="breaking-news-banner__time">{{- view.date_last_modified | format_date('time_only') -}}</span>
     </div>
     <h1 class="article-heading article-heading--breaking-news">
