--- a/sass/web.site/modules/article/_column-heading.sass
+++ b/sass/web.site/modules/article/_column-heading.sass
@@ -55,11 +55,11 @@
 			padding: em(30px) 0 em(20px)
 
 	&__column-details
-		letter-spacing: 0.05em
-		margin-bottom: em(3px)
-		font-size: $font-m--rem
-		&__link
-			+link-colors($charcoal, $white, $white, $charcoal, $white)
+		+link-colors($charcoal, $white, $white, $charcoal, $white)
+		&__title
+			letter-spacing: 0.05em
+			margin-bottom: em(3px)
+			font-size: $font-m--rem
 
 	&__title
 		color: $white
