add initial column article and column-header styles, TODO: review structure

--- a/sass/_constants.sass
+++ b/sass/_constants.sass
@@ -127,6 +127,12 @@ $color-twitter:  #2f95c1 !default
 $color-facebook: #4256a2 !default
 $color-google:   #a12f25 !default
 
+// styleguide blues
+$cararra:        #F0EEEC !default
+$trout:          #535560 !default
+$tuna:           #333338 !default
+$shark:          #26262C !default
+
 // semantic colors
 $color-page-bg:         $white !default
 $color-text:            $black !default
