--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -61,7 +61,11 @@
 @import "modules/breaking-news-banner"
 @import "modules/article/article"
 @import "modules/article/article-heading"
+@import "modules/metadata"
 @import "modules/pagination"
+
+// article - column
+@import "modules/article/column-heading"
 
 // comments
 @import "modules/comments/comment-section"
