--- a/sass/web.site/modules/article/_article.sass
+++ b/sass/web.site/modules/article/_article.sass
@@ -4,11 +4,11 @@
 		width: remify(660px)
 		margin: auto
 
+.article__subheading,
 .article-page__page-teaser
-	color: $zon-charcoal
 	font-size: remify(20px)
 	line-height: 1.25
-	margin: 2em 0 1em
+	margin: 1.4em 0 .5em
 	+respond-min($break-desktop-min)
 		font-size: remify(24px)
 
@@ -17,8 +17,10 @@
 .article__page-teaser
 	color: $grey--mid
 	font-size: remify(18px)
-	line-height: 1.5
+	line-height: 1.4
 	margin-bottom: remify($petite--px)
+	+respond-min($break-tablet-min)
+		line-height: 1.5
 	+respond-min($break-desktop-min)
 		font-size: remify(20px)
 
@@ -26,7 +28,9 @@
 	font-family: $font-franziska
 	font-size: remify(18px)
 	line-height: 1.4
-	margin-bottom: $little
+	margin: 0 0 .6em
+	+respond-min($break-tablet-min)
+		line-height: 1.5
 	+respond-min($break-desktop-min)
 		font-size: remify(20px)
 	a
@@ -41,7 +45,7 @@
 			border-bottom-color: rgba($color-link--active, .5)
 
 .byline
-	margin-bottom: remify(40px)
+	margin-bottom: remify(30px)
 
 .byline__author
 	font-weight: bold
@@ -76,9 +80,3 @@
 	a
 		// normal, hover, active, visited, focus
 		+link-colors($zon_grey, $color-link--hover, $color-link--active, $zon_grey, $color-link--focus)
-
-.figure__text
-// @todo
-
-.figure__copyright
-
