--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -43,19 +43,7 @@
                 {% endif %}
             </div>
             <div class="metadata">
-                {% if view.source_label -%}
-                <span class="metadata__source{% if view.obfuscated_source %} encoded-date" data-obfuscated="{{ view.obfuscated_source }}{% endif %}">
-                    {%- if view.source_url -%}
-                    <a href="{{ view.source_url }}">{{ view.source_label }}</a> -
-                    {%- else -%}
-                    {{ view.source_label }}
-                    {%- endif -%}
-                </span>
-                {% endif -%}
-
-                <time class="metadata__date{% if view.obfuscated_date %} encoded-date" data-obfuscated="{{ view.obfuscated_date }}{% endif %}" datetime="{{ view.date_last_modified | format_date('iso8601') }}">
-                {{- view.date_last_modified | format_date(view.show_date_format) -}}
-                </time>
+                {% include "zeit.web.site:templates/inc/article/metadata.tpl" ignore missing %}
             </div>
             {% endif %}
         {% endblock article_meta %}
