--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -21,33 +21,37 @@
             {%- endif -%}
         {% endblock schema_org_image_info %}
         {% block article_heading %}
-        <h1 class="article-heading" itemprop="headline">
-            <span class="article-heading__kicker">
-                {{- view.supertitle | hide_none -}}
-            </span>{%- if view.title -%}<span class="article-heading__colon">: </span>{%- endif -%}
-            <span class="article-heading__title">
-                {{- view.title | hide_none -}}
-            </span>
-        </h1>
+            <div class="article__item">
+                <h1 class="article-heading" itemprop="headline">
+                    <span class="article-heading__kicker">
+                        {{- view.supertitle | hide_none -}}
+                    </span>{%- if view.title -%}<span class="article-heading__colon">: </span>{%- endif -%}
+                    <span class="article-heading__title">
+                        {{- view.title | hide_none -}}
+                    </span>
+                </h1>
+            </div>
         {% endblock article_heading %}
         {% block article_meta %}
-            {% if view.pagination and view.pagination.current > 1 %}
-            <div class="article__page-teaser">
-                Seite {{ view.pagination.current }}/{{ view.pagination.total }}: {{ view.current_page.teaser }}
-            </div>
-            {% else %}
-            <div class="summary" itemprop="description">
-                {{ view.subtitle | hide_none }}
-            </div>
-            <div class="byline" itemscope itemtype="http://schema.org/Person" itemprop="author">
-                {% if view.authors %}
-                    {{ blocks.meta_author(view.authors, class="byline__author") }}
+            <div class="article__item">    
+                {% if view.pagination and view.pagination.current > 1 %}
+                <div class="article__page-teaser">
+                    Seite {{ view.pagination.current }}/{{ view.pagination.total }}: {{ view.current_page.teaser }}
+                </div>
+                {% else %}
+                <div class="summary" itemprop="description">
+                    {{ view.subtitle | hide_none }}
+                </div>
+                <div class="byline" itemscope itemtype="http://schema.org/Person" itemprop="author">
+                    {% if view.authors %}
+                        {{ blocks.meta_author(view.authors, class="byline__author") }}
+                    {% endif %}
+                </div>
+                <div class="metadata">
+                    {% include "zeit.web.site:templates/inc/article/metadata.tpl" ignore missing %}
+                </div>
                 {% endif %}
             </div>
-            <div class="metadata">
-                {% include "zeit.web.site:templates/inc/article/metadata.tpl" ignore missing %}
-            </div>
-            {% endif %}
         {% endblock article_meta %}
     {% endprofile %}
     {% profile %}
