Refactor gallery and image code a little to fit in with new article format

--- a/sass/web.site/modules/article/_article.sass
+++ b/sass/web.site/modules/article/_article.sass
@@ -2,14 +2,21 @@
 	width: auto
 
 	&__item
+		
 		&--wide
 			margin-bottom: em(40px)
 			margin-left: -$page-padding
 			margin-right: -$page-padding
+			// TODO: make this specific or remove 
+			//       currently targeting: .scaled-image img
+			img
+				width: 100%
+
 		+respond-min($break-desktop-min)
 			width: remify(660px)
 			margin-left: auto
 			margin-right: auto
+			
 			&--wide
 				width: remify(820px)
 				margin-top: em(40px)
