--- a/sass/web.site/modules/_standard-gallery.sass
+++ b/sass/web.site/modules/_standard-gallery.sass
@@ -9,8 +9,8 @@ $gallery-offset-desktop: ($max-page-width - $medium-content-width) / 2
         margin-bottom: $big
         padding: $page-padding
     +respond-min($break-desktop-min)
-        margin-left: -$gallery-offset-desktop
-        margin-right: -$gallery-offset-desktop
+        // margin-left: -$gallery-offset-desktop
+        // margin-right: -$gallery-offset-desktop
         padding: $medium $big $big
 
 .gallery__description
