--- a/src/zeit/web/site/templates/breaking_news_article.html
+++ b/src/zeit/web/site/templates/breaking_news_article.html
@@ -4,12 +4,14 @@
     <div class="breaking-news-banner">
         Eilmeldung <span class="breaking-news-banner__time">{{- view.date_last_modified | format_date('time_only') -}}</span>
     </div>
-    <h1 class="article-heading article-heading--breaking-news" itemprop="headline">
-        <span class="article-heading__kicker">
-            {{- view.supertitle | hide_none -}}
-        </span>{%- if view.title -%}<span class="article-heading__colon">: </span>{%- endif -%}
-        <span class="article-heading__title">
-            {{- view.title | hide_none -}}
-        </span>
-    </h1>
+    <div class="article__item">
+        <h1 class="article-heading article-heading--breaking-news" itemprop="headline">
+            <span class="article-heading__kicker">
+                {{- view.supertitle | hide_none -}}
+            </span>{%- if view.title -%}<span class="article-heading__colon">: </span>{%- endif -%}
+            <span class="article-heading__title">
+                {{- view.title | hide_none -}}
+            </span>
+        </h1>
+    </div>
 {% endblock article_heading %}
