--- a/sass/web.site/modules/article/_column-heading.sass
+++ b/sass/web.site/modules/article/_column-heading.sass
@@ -50,6 +50,7 @@
 			padding: em(30px) 0 em(20px)
 
 	&__column-details
+		color: $charcoal
 		letter-spacing: 0.05em
 		margin-bottom: em(3px)
 		font-size: $font-m--rem
