add class for pages with authors, add initial dropcap styling

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -60,6 +60,7 @@
 // article
 @import "modules/breaking-news-banner"
 @import "modules/article/article"
+@import "modules/article/paragraph"
 @import "modules/article/article-heading"
 @import "modules/pagination"
 
