ZON-1395: Repair width of fullwidth teaser

--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -4,7 +4,7 @@
 	padding-top: 0
 	+respond-min($break-tablet-min)
 		border-bottom: none
-		margin: $petite 0
+		margin: $petite (-$page-padding)
 		overflow: hidden
 		padding: 0
 		position: relative
