Fix ZMO menu icon

--- a/sass/web.magazin/modules/_nav.sass
+++ b/sass/web.magazin/modules/_nav.sass
@@ -124,7 +124,7 @@ $icon-avatar-std-size: em(32px)
 
 
 .main-nav__menu__head__hamburger
-    +inline-block
+    +inline-block(middle)
     text-indent: -119999px
     text-align: left
     width: 25px
