--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -217,7 +217,7 @@
 		color: $visited-color
 	&:hover
 		background-color: $hover-background-color
-		border: 2px solid $hover-border-color
+		border-color: $hover-border-color
 		color: $hover-color
 		cursor: pointer
 
