ZON-1544: Work in progress

--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -4,16 +4,15 @@
 
 %teaser
 	+pie-clearfix
-	border-top: 1px solid $zon_light_grey
-	margin: 0 -($page-padding)
-	padding: $petite $page-padding
+	// border-top: 1px solid $zon_light_grey
+	margin: 0 0 $hefty
+	padding: 0 $page-padding
 	&:nth-of-type(1)
-		border-top: none
+		// border-top: none
 	+respond-min($break-tablet-min)
-		border-bottom: none
-		border-top: none
-		margin: 0
-		padding: $petite 0
+		// border-bottom: none
+		// border-top: none
+		padding: 0
 
 %teaser-small-media-placement
 	position: relative
