--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -21,7 +21,6 @@
 @import "modules/footer"
 @import "modules/parquet"
 @import "modules/page"
-@import "modules/teasers"
 // teaser
 @import "modules/teaser/teaser"
 @import "modules/teaser/teaser-small"
@@ -35,8 +34,9 @@
 @import "modules/teaser/teaser-printbox"
 @import "modules/teaser/teaser-beta"
 @import "modules/teaser/teaser-blog"
-// snapshot
-@import "modules/snapshot"
+// centerpage
+@import "modules/centerpage/centerpage"
+@import "modules/centerpage/snapshot"
 // video-stage
 @import "modules/video/video-stage"
 @import "modules/video/video-stage-heading"
