--- a/src/zeit/web/site/templates/centerpage.html
+++ b/src/zeit/web/site/templates/centerpage.html
@@ -22,25 +22,28 @@ Available attributes:
 {% endblock metadata %}
 
 {% block main %}
-
     {% for region in view.regions %}
         {%- include "zeit.web.site:templates/inc/region/default.html" ignore missing -%}
     {% endfor %}
 
-    <div class="main__content">
-        {%- include "zeit.web.site:templates/inc/cp_area_main.html" ignore missing -%}
+    <div class="cp-region">
+        <div class="cp-area cp-area--2third">
+            {%- include "zeit.web.site:templates/inc/cp_area_main.html" ignore missing -%}
+        </div>
+        <div class="cp-area cp-area--1third">
+            {{ lama_site.show_informative_ad(view, true) }}
+            {%- include "zeit.web.site:templates/inc/cp_area_buzz.html" ignore missing -%}
+            {{ lama_site.show_informative_ad(view) }}
+            {%- include "zeit.web.site:templates/inc/cp_area_printbox.html" ignore missing -%}
+        </div>
     </div>
-    <div class="main__informatives">
-        {{ lama_site.show_informative_ad(view, true) }}
-        {%- include "zeit.web.site:templates/inc/cp_area_buzz.html" ignore missing -%}
-        {{ lama_site.show_informative_ad(view) }}
-        {%- include "zeit.web.site:templates/inc/cp_area_printbox.html" ignore missing -%}
-    </div>
+
     {%- include "zeit.web.site:templates/inc/cp_area_videostage.html" ignore missing -%}
-    <div class="main__parquet">
+
+    <div class="cp-region">
         {%- include "zeit.web.site:templates/inc/cp_area_parquet.html" ignore missing -%}
     </div>
-    <div class="main__snapshot">
+    <div class="cp-region">
         {%- include "zeit.web.site:templates/inc/cp_area_snapshot.html" ignore missing -%}
     </div>
 {% endblock main %}
