--- a/src/zeit/web/site/templates/inc/cp_area_parquet.html
+++ b/src/zeit/web/site/templates/inc/cp_area_parquet.html
@@ -1,4 +1,4 @@
-<div class="parquet" id="parquet">
+<div class="cp-area cp-area--parquet" id="parquet">
     {% for row in view.area_parquet -%}
         {# spektrum hp feed sonderlocke #}
         {% if row.type == 'cpextra' and row.cpextra == 'parquet-spektrum' %}
