--- a/src/zeit/web/site/templates/inc/cp_area_snapshot.html
+++ b/src/zeit/web/site/templates/inc/cp_area_snapshot.html
@@ -4,7 +4,7 @@
 {% set href = "/kultur/2012-03/fs-momente" %}
 
 {% if image -%}
-<div class="snapshot" id="snapshot" hidden>
+<div class="cp-area cp-area--snapshot" id="snapshot" hidden>
     <div class="snapshot__title">Momentaufnahme</div>
     <a href="{{ href }}" class="snapshot-readmore"><span class="snapshot-readmore__item">Gesammelte Momente</span></a>
     {% include "zeit.web.site:templates/inc/teaser_asset/snapshot-image.tpl" ignore missing with context %}
