ZON-1544: More work in preogress

--- a/sass/web.site/modules/centerpage/_centerpage.sass
+++ b/sass/web.site/modules/centerpage/_centerpage.sass
@@ -1,4 +1,4 @@
-$cp-padding: $page-padding / 2
+$cp-padding: em(10px)
 
 .cp-region
 	padding: 0 $cp-padding
@@ -7,6 +7,7 @@ $cp-padding: $page-padding / 2
 .cp-area
 	padding: 0 $cp-padding
 	float: left
+	width: 100%
 	&--1third
 		+respond-min($break-tablet-min)
 			width: 33.33%
