--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -1,10 +1,10 @@
 .teaser-fullwidth
 	@extend %teaser
 	border-bottom: 1px solid $zon_light_grey
-	padding-top: 0
 	+respond-min($break-tablet-min)
 		border-bottom: none
-		margin: $petite (-$page-padding)
+		margin-left: -$page-padding
+		margin-right: -$page-padding
 		overflow: hidden
 		padding: 0
 		position: relative
