--- a/sass/web.site/modules/teaser/_teaser-series.sass
+++ b/sass/web.site/modules/teaser/_teaser-series.sass
@@ -1,6 +1,8 @@
 // teaser for series elements
 .teaser-series
 	@extend %teaser
+	padding-top: $petite
+	padding-bottom: $petite
 	+respond-min($break-phablet-min)
 		border-top: 1px dotted $zon_light_grey
 		border-bottom: 1px dotted $zon_light_grey
