--- a/src/zeit/web/magazin/templates/inc/teaser/abstract/abstract_nextread_teaser_template.html
+++ b/src/zeit/web/magazin/templates/inc/teaser/abstract/abstract_nextread_teaser_template.html
@@ -27,8 +27,8 @@ All calling templates have to provide:
 {% endif %}
 
 <div class="article__nextread__body article__nextread__body--{{ teaser_block.multitude }}{% if not image %} article__nextread__body--no-img{% endif %}" style="{{ bg_image }}">
-    <a title="{{ teaser.supertitle }}: {{ teaser.title }}" href="{{ teaser.uniqueId|translate_url }}">
-        
+    <a class="article__nextread__link" title="{{ teaser.supertitle }}: {{ teaser.title }}" href="{{ teaser.uniqueId|translate_url }}">
+
         {# display bg image #}
         {% if image and self.teaser_image() == 'true' %}
             <div class="scaled-image article__nextread__img article__nextread__img--{{ teaser_block.multitude }}">
