--- a/src/zeit/web/site/templates/inc/region/default.html
+++ b/src/zeit/web/site/templates/inc/region/default.html
@@ -1,4 +1,4 @@
-<div class="cp-region">
+<div class="cp-region {{ region.layout | hide_none }}">
     {% for area in region %}
         {%- include ["zeit.web.site:templates/inc/area/" + area.layout + ".html",
                      "zeit.web.site:templates/inc/area/default.html"] ignore missing -%}
