ZON-1531: Load content ad javascript in ZMO
We decided to comment this out, until we built a toggle that works on both ZMO and ZON (story will be created by @micheal)

--- a/src/zeit/web/magazin/templates/layout.html
+++ b/src/zeit/web/magazin/templates/layout.html
@@ -65,6 +65,7 @@
             <!-- <![endif]-->
         {% endif %}
         {% include "zeit.web.core:templates/inc/ads/%s/head.html" % view.ad_delivery_type ignore missing %}
+        {%- block content_ad_script -%}{%- endblock -%}
     </head>
     <body itemscope itemtype="http://schema.org/WebPage" data-adDeliveryType="{{ view.ad_delivery_type }}">
         <!-- tracking at top -->
