ZON-1531: Load content ad javascript in ZON
We decided to comment this out, until we built a toggle that works on both ZMO and ZON (story will be created by @micheal)

--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -61,6 +61,7 @@
     </noscript>
 
     {% include "zeit.web.core:templates/inc/ads/%s/head.html" % view.ad_delivery_type ignore missing %}
+    {%- block content_ad_script -%}{%- endblock -%}
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" data-page-type="{{ view.type }}"  data-unique-id="{{ context.uniqueId }}" data-adDeliveryType="{{view.ad_delivery_type}}">
     <!-- tracking at top -->
