--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -7,6 +7,21 @@
     {% endfor %}
 {% endmacro %}
 
+{% block content_ad_script -%}
+{% if view.context.advertising_enabled %}
+<!-- content ad script, commented out until toggled -->
+<!--script type="text/javascript">
+    (function() {
+        var s = document.createElement('script');
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = document.location.protocol + '//cdn.iqcontentplatform.de/iq.js';
+        var sc = document.getElementsByTagName('script')[0]; sc.parentNode.insertBefore(s, sc);
+    })();
+</script-->
+{% endif %}
+{%- endblock %}
+
 
 {% block article_pages %}
     <div class="article-page">
