--- a/sass/web.site/modules/article/_article.sass
+++ b/sass/web.site/modules/article/_article.sass
@@ -2,6 +2,8 @@
 	width: auto
 
 	&__item
+
+		width: 100%
 		
 		&--wide
 			margin-bottom: em(40px)
@@ -13,16 +15,17 @@
 				width: 100%
 
 		+respond-min($break-desktop-min)
-			width: remify(660px)
+			max-width: remify(660px)
 			margin-left: auto
 			margin-right: auto
 			
 			&--wide
-				width: remify(820px)
+				max-width: remify(820px)
 				margin-top: em(40px)
 
 			&--full
 				width: 100%
+				max-width: auto
 
 .article__subheading,
 .article-page__page-teaser
