--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -2,9 +2,13 @@
     {% block before_module_list %}{% endblock %}
     {% for teaser_block in area -%}
         {% set teaser = teaser_block | first_child %}
+        {% set index = loop.index %}
+        {% block before_module_include scoped %}{% endblock %}
         {% include
             ["zeit.web.site:templates/inc/teaser/" + teaser_block | get_teaser_layout + ".tpl",
              "zeit.web.site:templates/inc/module/" + teaser_block | get_teaser_layout + ".html",
              "zeit.web.site:templates/inc/teaser/default.tpl"] %}
+        {% block after_module_include scoped %}{% endblock %}
     {% endfor %}
+    {% block after_module_list %}{% endblock %}
 </div>
