--- a/sass/web.site/modules/article/_column-heading.sass
+++ b/sass/web.site/modules/article/_column-heading.sass
@@ -31,7 +31,7 @@
 		+respond-max($break-phablet-min)
 			position: absolute
 			bottom: 0
-			right: 0
+			right: remify(-1.25em)
 			width: 33%
 			z-index: 0
 		+respond-min($break-phablet-min)
@@ -68,31 +68,37 @@
 
 	&__title
 		color: $white
-		margin-bottom: 0
-		margin-top: 0
+		margin-bottom: remify(0.25em)
+		margin-top: remify(0.25em)
 		letter-spacing: 0.008em
-		font-size: $font-xl--rem
+		font-size: remify(24px)
+		line-height: percentage(31/24)
+		max-width: remify(400px)
 		+respond-min($break-phablet-min)
-			font-size: $font-xl--rem
+			max-width: remify(550px)
 		+respond-min($break-tablet-min)
-			font-size: $font-xxl--rem
+			margin-top: remify(0em)
+			margin-bottom: remify(-3px)
+			max-width: auto
+			font-size: remify(32px)
 
 	&__name
 		color: $cararra
 		font-family: $font-franziska
 		font-style: italic
 		margin-top: 0
-		font-size: $font-m--rem
+		font-size: remify(18px)
+		line-height: percentage(22/18)
 		+respond-max($break-phablet-min)
 			width: 67%
-		+respond-min($break-phablet-min)
-			font-size: $font-xl--rem
 		+respond-min($break-tablet-min)
-			font-size: $font-xxl--rem
+			font-size: remify(32px)
+			line-height: 1.5
 		&__link
 			+link-colors($cararra, $white, $white, $cararra, $white)
 
 	&__summary
 		padding: $medium 0
+		line-height: percentage(22/18)
 		+respond-min($break-phablet-min)
 			padding: $big 0
