--- a/sass/web.site/modules/article/_paragraph.sass
+++ b/sass/web.site/modules/article/_paragraph.sass
@@ -2,7 +2,7 @@
   font-family: $font-franziska
   font-size: remify(18px)
   line-height: 1.4
-  margin: 0 0 .6em
+  margin-bottom: .6em
   +respond-min($break-tablet-min)
     line-height: 1.5
   +respond-min($break-desktop-min)
