change breakpoint, I think this was changed by accident during a merge

--- a/sass/web.site/modules/_breaking-news-banner.sass
+++ b/sass/web.site/modules/_breaking-news-banner.sass
@@ -19,7 +19,7 @@
 		color: $zon-charcoal
 		display: block
 		padding: remify(18px) 0
-		+respond-min($break-desktop-min)
+		+respond-min($break-tablet-min)
 			margin-top: remify(24px)
 			padding: remify(22px) 0
 	&__time
