--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -9,7 +9,7 @@
 
 
 {% block article_pages %}
-    <div class="article-page {{ 'article-page--with-author' if view.authors }}">
+    <div class="article-page">
         {{ render_page(view.current_page) }}
     </div>
 {% endblock article_pages %}
