small tweaks to styles

--- a/sass/web.site/modules/article/_column-heading.sass
+++ b/sass/web.site/modules/article/_column-heading.sass
@@ -20,13 +20,13 @@
 	&__information
 		+respond-min($break-phablet-min)
 			display: table-cell
-	
+
 	&__information
 		+respond-min($break-phablet-min)
 			width: 65%
 		+respond-min($break-tablet-min)
 			width: 70%
-	
+
 	&__author
 		+respond-max($break-phablet-min)
 			position: absolute
@@ -60,7 +60,7 @@
 
 	&__column-details
 		color: $charcoal
-		letter-spacing: 0.05em
+		letter-spacing: $zon-letter-spacing-m
 		margin-bottom: em(3px)
 		font-size: $font-m--rem
 		&__link
