--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -62,7 +62,7 @@
 @import "modules/article/article"
 @import "modules/article/paragraph"
 @import "modules/article/article-heading"
-@import "modules/metadata"
+@import "modules/article/metadata"
 @import "modules/pagination"
 
 // article - column
