--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -97,10 +97,10 @@
                 {% endblock navigation %}
                 {% block metadata %}
                 {% endblock metadata %}
-                {% block breaking_news %}
-                    {%- include "zeit.web.site:templates/inc/breaking_news.tpl" ignore missing -%}
-                {% endblock breaking_news %}
             </header>
+            {% block breaking_news %}
+                {%- include "zeit.web.site:templates/inc/breaking_news.tpl" ignore missing -%}
+            {% endblock breaking_news %}
             {% endprofile %}
             {% block adplace_billboard %}
                 {{ lama_core.adplace(view.banner(3), view) }}
@@ -109,7 +109,7 @@
                 {% block main %}{% endblock main %}
             </main>
             {% profile %}
-            <footer class="footer" role="contentinfo">
+            <footer class="footer" role="contentinfo" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement" >
                 {% block footer %}
                     {%- include "zeit.web.site:templates/inc/footer.html" ignore missing -%}
                 {% endblock footer %}
